# job-agent-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-start.sh  langgraph.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: run_application_example.py  run_multiagent_example.py
quality_tests/: conftest.py  test_type_checking.py
scripts/: create-worktree.sh  delete-worktree.sh  docker_rebuild_and_up.sh  reinstall_packages.sh
smoke_tests/: __init__.py  conftest.py  test_type_checking.py
src/: __init__.py  application.py  utils.py
src/connector/: __init__.py
src/contracts/: __init__.py  scrapper.py
src/core/: orchestrator.py
src/filter_service/: __init__.py  filter.py
src/interfaces/: __init__.py
src/interfaces/telegram_bot/: bot.py  handlers.py  main.py
src/multiagent/: __init__.py  agent.py  graph.py  nodes.py  schemas.py  state.py  utils.py
src/multiagent/job_processing/: __init__.py  agent.py  job_processing.py
src/multiagent/job_processing/nodes/: __init__.py
src/multiagent/job_processing/nodes/check_job_relevance/: __init__.py  node.py
src/multiagent/job_processing/nodes/extract_must_have_skills/: __init__.py
src/multiagent/job_processing/nodes/print_jobs/: node.py
src/multiagent/nodes/: __init__.py  check_job_relevance.py  extract_must_have_skills.py  extract_skills.py  print_jobs.py
src/multiagent/nodes/extract_must_have_skills/: node.py
src/multiagent/nodes/print_jobs/: __init__.py
src/multiagent/nodes/remove_pii/: node.py  schemas.py
src/multiagent/pii_removal/: __init__.py  pii_removal.py
src/multiagent/pii_removal/nodes/remove_pii/: prompts.py
src/multiagent/prompts/: __init__.py  check_job_relevance.py
src/scrapper_service/: manager.py
src/workflows/job_processing/: job_processing.py  state.py
src/workflows/job_processing/nodes/check_job_relevance/: __init__.py
src/workflows/job_processing/nodes/extract_must_have_skills/: prompts.py  schemas.py
src/workflows/job_processing/nodes/print_jobs/: __init__.py
src/workflows/pii_removal/: state.py
src/workflows/pii_removal/nodes/: __init__.py
src/workflows/pii_removal/nodes/remove_pii/: node.py
