[project]
name = "job-agent-platform"
version = "0.1.0"
dependencies = [
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-api>=0.5.3,<0.6.0",
    "langgraph-runtime-inmem>=0.16.0,<0.17.0"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
