[project]
name = "job-agent-platform"
version = "0.1.0"
dependencies = [
    "langgraph-cli[inmem]>=0.4.11",
    "langgraph-api>=0.6.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["packages", "smoke_tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "smoke: marks tests as smoke tests (deselect with '-m \"not smoke\"')",
]
